--- a/back-end/package.json
+++ b/back-end/package.json
@@ -12,17 +12,28 @@
   },
   "dependencies": {
     "@types/express": "^4.17.7",
+    "@types/redis": "^2.8.28",
+    "aws": "^0.0.3-2",
+    "aws-sdk": "^2.793.0",
     "bcryptjs": "^2.4.3",
+    "celebrate": "^13.0.4",
+    "class-transformer": "^0.3.1",
     "cors": "^2.8.5",
     "date-fns": "^2.15.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-handlebars": "^5.1.0",
+    "ioredis": "^4.19.2",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.3",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.14",
     "pg": "^8.3.2",
+    "rate-limiter-flexible": "^2.1.13",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.13",
+    "sdk": "^0.5.0",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.2.3"
@@ -30,6 +41,8 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.7",
+    "@types/hapi__joi": "^17.1.6",
+    "@types/ioredis": "^4.17.8",
     "@types/jest": "^26.0.14",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.4",
